fixed api bug
